feat: mudando porta da aplicação

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #AMQP
 spring.rabbitmq.addresses=${RABBIT_MQ_ADDRESSES}
 spring.rabbitmq.queue=ms.email
+
+server.port = 8081
